// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mounted test component html matches snapshot with default prop value 1`] = `
<div>
  <h1>Hello Test</h1>
</div>
`;

exports[`mounted test component html matches snapshot with default prop value 2`] = `
<div>
  <h1>Hello You</h1>
</div>
`;
